--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 </head>
 <body>
-<h1>HTML and CSS</h1>
 <a href="./js-questions-replies.html"><h1>Java Script</h1></a>
-
+<h1>Assigment HTML and CSS</h1>
 <div>
 	<details>
 		<summary>1. What do HTML and CSS stand for?</summary>
