--- a/js-questions-replies.html
+++ b/js-questions-replies.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <a href="./index.html"><h1>HTML and CSS</h1></a>
-<h1>Assigment 3 Java Script</h1>
+<h1>Assigment Java Script</h1>
 
 <div>
 	<details>
