--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</details>
 	<details>
 	<summary>2. Would you rather use HTML or CSS, for putting paragraphs of text on a webpage?</summary>
-	<p>I woud rather use HTML for putting paragraphs of text on a webpage because we will be able to create the structure of your website with haelp HTML , but we can make the website look more visually appealing with CSS using styles.</p>
+	<p>I woud rather use HTML for putting paragraphs of text on a webpage because we will be able to create the structure of your website with help HTML , but we can make the website look more visually appealing with CSS using styles.</p>
 	</details>
 	<details>
 		<summary>3. Would you rather use HTML or CSS, for putting paragraphs of text on a webpage?</summary>
