--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<p><span class="bold>">Head</span> element is a container data about data (<span class="bold">meta</span> tag), which placed between <span class="bold">html</span> tag and <span class="bold">body</span> tag.</p></details>
 	<details>
 		<summary>10. What is the purpose of the body element?</summary>
-	<p>The purpose of the body element is to be a container for hatml elements, such as headings, paragraphs, images, hyperlinks, tables, divs, lists</p></details>
+	<p>The purpose of the body element is to be a container for html elements, such as headings, paragraphs, images, hyperlinks, tables, divs, lists</p></details>
 	<details>
 		<summary>11. How do you create a paragraph in HTML?</summary>
 	<p>Put your text between open and close tag <span class="bold">p</span> for creating paragraph.</p></details>	
@@ -66,10 +66,10 @@
 	<p>I should use an <span class="bold">em</span> for making text italicized.</p></details>
 	<details>
 		<summary>15. What relationship does an element have with any nested elements within it?</summary>
-	<p></p></details>
+	<p>They are parent and child</p></details>
 	<details>
 		<summary>16. What relationship do two elements have if they are at the same level of nesting?</summary>
-	<p></p></details>
+	<p>They are siblings, because they both children of body tag.</p></details>
 	<details>
 		<summary>17. How do you create HTML comments?</summary>
 	<p>I create HTML comments with help exclamation mark (<!--Comments --> ).</p></details>
