--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 	<p>I should use an <span class="bold">em</span> for making text italicized.</p></details>
 	<details>
 		<summary>15. What relationship does an element have with any nested elements within it?</summary>
-	<p>They are parent and child</p></details>
+	<p>They are parent and child.</p></details>
 	<details>
 		<summary>16. What relationship do two elements have if they are at the same level of nesting?</summary>
-	<p>They are siblings, because they both children of body tag.</p></details>
+	<p>They are siblings, because they both are children of body tag.</p></details>
 	<details>
 		<summary>17. How do you create HTML comments?</summary>
 	<p>I create HTML comments with help exclamation mark (<!--Comments --> ).</p></details>
